# forgeai

./: .gitignore  README.md  coverity.yaml  docker-compose.dev.yml
contract_tests/: __init__.py  conftest.py  requirements.txt  test_cpp_media_contract.py  test_cpp_media_malformed.py
cpp_media/: Makefile  README.md  cpp_media  hello  httplib.h.bak  main.cpp  profiles.cpp  profiles.hpp  request_parser.cpp  request_parser.hpp
docs/: architecture.md  data-flow.md  observability.md  runbook.md  testing.md
docs/contracts/: cpp_media.yaml  dotnet_api.yaml  error-response.md  public-api-v1.yaml  python_gen.yaml  rust_index.yaml
docs/current-state/: README.md  cpp-media.md  data-flow.md  dotnet-api.md  python-gen.md  rails-api.md  rust-index.md
dotnet_api/: Program.Reference.cs  Program.cs  README.md  appsettings.Development.json  appsettings.json  dotnet_api.csproj
dotnet_api.Tests/: ApiKeyValidationTests.cs  ContractTests.cs  dotnet_api.Tests.csproj
dotnet_api/Properties/: launchSettings.json
idir/: build-cwd.txt  build-log.txt  capture-files-log.txt  security-da-log.txt  security-da-timings.txt
idir/coverity-cli/: capture-file-list-421685284  capture-files-src-list-841879728  capture-platform  config-hash  cov-emit-cs-resp-2798871452  coverity-cli-log.txt  timestamps.json
python_gen/: README.md  main.py  requirements.txt
rails_app/: Gemfile  README.md
rust_index/: Cargo.toml  README.md
rust_index/src/: lib.rs  main.rs  storage.rs
rust_index/tests/: api_contract.rs  persistence.rs
scripts/: bootstrap.sh  e2e_smoke.sh  run_all.sh  smoke_test.sh
(+114 files in other folders)
