[package]
name = "rust_index"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_index"
path = "src/lib.rs"

[[bin]]
name = "rust_index"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
tempfile = "3"
